@@ -32,4 +32,5 @@ Bugfixes:
 * backend: fix possible cache inconstency in worker binary cache
 * backend: multiple fixes for constraints handling
 * backend: use configured http proxies when download worker code.
+* api: ensure existins of "deleted" project and repository on update
 
